--- a/metastore/ivy.xml
+++ b/metastore/ivy.xml
@@ -36,7 +36,9 @@
       <exclude org="org.apache.geronimo.specs" module="geronimo-jta_1.1_spec"/>
     </dependency>
     <dependency org="commons-pool" name="commons-pool" rev="${commons-pool.version}"/>
-    <dependency org="org.datanucleus" name="datanucleus-connectionpool" rev="${datanucleus-connectionpool.version}"
+    <!--<dependency org="org.datanucleus" name="datanucleus-connectionpool" rev="${datanucleus-connectionpool.version}"
+                transitive="false"/>-->
+     <dependency org="org.datanucleus" name="datanucleus-api-jdo" rev="${datanucleus-api-jdo.version}"
                 transitive="false"/>
      <dependency org="org.datanucleus" name="datanucleus-core" rev="${datanucleus-core.version}"
                 transitive="false"/>
