--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -24,10 +24,10 @@ antlr.version=3.4
 antlr-runtime.version=3.4
 asm.version=3.1
 avro.version=1.7.1
-datanucleus-connectionpool.version=2.0.3
-datanucleus-core.version=2.0.3
-datanucleus-enhancer.version=2.0.3
-datanucleus-rdbms.version=2.0.3
+datanucleus-api-jdo.version=3.0.1
+datanucleus-core.version=3.0.1
+datanucleus-enhancer.version=3.0.1
+datanucleus-rdbms.version=3.0.1
 checkstyle.version=5.0
 findbugs.version=1.3.9
 commons-cli.version=1.2
@@ -47,7 +47,7 @@ guava.version=11.0.2
 hbase.version=0.94.6.1
 jackson.version=1.8.8
 javaewah.version=0.3.2
-jdo-api.version=2.3-ec
+jdo-api.version=3.0.1
 jdom.version=1.1
 jetty.version=6.1.26
 jline.version=0.9.94
