--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,11 @@
          xmlns:maven="antlib:org.apache.maven.artifact.ant">
 
   <property name="hive.root" location="${basedir}"/>
+  
+  <!-- Set compiler for Java 1.6 -->
+  <property name="ant.build.javac.source" value="1.6"/>
+  <property name="ant.build.javac.target" value="1.6"/>
+  
   <property file="${hive.root}/build.properties"/>
   <property file="${user.home}/build.properties" />
   <property file="${basedir}/build.properties" />
