--- a/hwi/ivy.xml
+++ b/hwi/ivy.xml
@@ -28,6 +28,8 @@
   <dependencies>
     <dependency org="org.apache.hive" name="hive-cli" rev="${version}"
                 conf="compile->default" />
+    <dependency org="org.apache.ant" name="ant" rev="${apacheant.version}" />
+    <dependency org="org.apache.ant" name="ant-launcher" rev="${apacheant.version}" />
     <dependency org="org.mortbay.jetty" name="jetty" rev="${jetty.version}" />
 
     <!-- Test Dependencies -->
